# integralibex

./: .travis.yml  CMakeLists.txt  NOTES  README.md  border.cpp  border.h  build_ibex_travis.sh  contributors.txt  conversion.cpp  conversion.h  graph.cpp  graph.h  graphdot.cpp  graphdot.h  imageintegral.cpp  imageintegral.h  inclusion.cpp  inclusion.h  integrationIBEX.pro  main.cpp  pave.cpp  pave.h  scheduler.cpp  scheduler.h  tests.cpp  tests.h  utils.cpp  utils.h
doc/: Buoy.py  VectorField.py  blender_script.py  conv_image.sh  maxima_CarOnHill.wxm  maxima_formel.wxm  qt_interval.py
